# Computer-Graphics-Course

./: README.md
Labirynt3D/: CMakeLists.txt  README.md  buildRun.bat
Labirynt3D/include/: shader_utils.h
Labirynt3D/shaders/: basic_vert.glsl  coin_frag.glsl  color_frag.glsl  obstacle_dots_frag.glsl  sphere_frag.glsl  wall_frag.glsl  win_frag.glsl  win_vert.glsl
Labirynt3D/src/: Camera.cpp  Camera.hpp  ClosestPointTriangle.h  CoinManager.cpp  CoinManager.hpp  Collision.cpp  Collision.hpp  InputHandler.cpp  InputHandler.hpp  MeshGenerator.cpp  MeshGenerator.hpp  MiniMap.cpp  MiniMap.hpp  ObstacleManager.cpp  ObstacleManager.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  glad.c  main.cpp
Volcano/: CMakeLists.txt  README.md  buildRun.bat
Volcano/include/: BubbleManager.hpp  Camera.hpp  Collision.hpp  InputHandler.hpp  MeshGenerator.hpp  MiniMap.hpp  ObstacleManager.hpp  Player.hpp  Renderer.hpp  UI.hpp
Volcano/shaders/: fragment_animation.glsl  fragment_instanced_sphere.glsl  fragment_minimap.glsl  fragment_phong.glsl  fragment_ui.glsl  vertex_animation.glsl  vertex_instanced_sphere.glsl  vertex_minimap.glsl  vertex_phong.glsl
Volcano/src/: BubbleManager.cpp  Camera.cpp  ClosestPointTriangle.cpp  Collision.cpp  InputHandler.cpp  MeshGenerator.cpp  MiniMap.cpp  ObstacleManager.cpp  Player.cpp  Renderer.cpp  UI.cpp  main.cpp
labirynt2D/: CMakeLists.txt  buildRun.bat
labirynt2D/include/: shader_utils.h
labirynt2D/include/glad/: glad.h
labirynt2D/shaders/: finish_fragment.glsl  finish_vertex.glsl  fragment.glsl  player_vertex.glsl  postprocess_fragment.glsl  rhombus_fragment.glsl  vertex.glsl
labirynt2D/src/: main.cpp
